Mon, 05 Nov 2007 12:54:35 +0100 <thp@perli.net>
Use util.find_command in more places (mplayer detection, ...)

	* src/gpodder/libgpodder.py: Use util.find_command to detect the
	existence of the "gnome-btdownload" command and spit out a warning log
	message when the command is not available
	* src/gpodder/libipodsync.py: Use util.find_command to check for an
	installed mplayer binary (instead of relying on os.system("which...")

Mon, 05 Nov 2007 01:12:15 +0100 <thp@perli.net>
Better command detection for the converter library

	* src/gpodder/libconverter.py: Detect existence of commands before
	invoking them for converting files; based on a patch by
	Nick (nikosapi.org); ConverterCollection is now a dict itself :)
	* src/gpodder/util.py: Add new find_command() function that will
	search the system's PATH for a specific executable command

Mon, 05 Nov 2007 00:21:39 +0100 <thp@perli.net>
Remove extracted cover art when deleting episode files

	* src/gpodder/util.py: Apply modified version of a patch from
	Nick (nikosapi.org) that is better suited for deleting cover art that
	has been extracted with the new eyeD3 cover art extraction code

Mon, 05 Nov 2007 00:17:12 +0100 <thp@perli.net>
Patch from Nick (nikosapi) to support eyeD3 cover art extraction

	* src/gpodder/libipodsync.py: Apply modified version of a patch from
	Nick (nikosapi.org) to utilize eyeD3 for cover art extraction in iPod
	sync code; remove dependency on PyID3
	* README: PyID3 is not a dependency anymore, as we can now use eyeD3
	for the same purpose (cover art extraction)

Sat, 03 Nov 2007 14:14:09 +0100 <thp@perli.net>
Fix format_filesize() function to be standards-conformant (unit prefixes)

	* src/gpodder/config.py: Add "use_si_units" configuration option; if
	True, the user will see SI units (MB, kB, ...); if False (the
	default); the user will see binary-prefix units (MiB, KiB, ..)
	* src/gpodder/libgpodder.py: Add pass-through function
	"format_filesize()" to gPodderLib that combines the